# heart-disease-api-monitoring

./: .gitignore  Dockerfile  README.md  create_patient_ids.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py  main.py  model_loader.py  monitoring.py  schemas.py
data/reference/: heart_cleaning.csv  patients_reference.csv
models/: best_rf_model.joblib  threshold.json
reports/: data_drift_report.html
tests/: test_api.py  test_model.py
