[project]
name = "heart-disease-api-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.21",
    "fastapi>=0.136.3",
    "hf-xet>=1.5.1",
    "huggingface-hub>=1.19.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn==1.8.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
